update target API to 35. upgrade to java 17. upgrade dependencies. replace deprecated functions. fixed crash bugs.